--- a/Windows/NbfcClient/Views/SelectConfigWindow.xaml
+++ b/Windows/NbfcClient/Views/SelectConfigWindow.xaml
@@ -1,8 +1,9 @@
-﻿<Window 
+﻿<Controls:MetroWindow 
     x:Class="NbfcClient.Windows.SelectConfigWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"        
-        
+    xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+    
     Title="Select Config" 
     Height="140" 
     Width="350" 
@@ -76,4 +77,4 @@
             Grid.ColumnSpan="2"
             VerticalAlignment="Bottom" />
     </Grid>
-</Window>
+</Controls:MetroWindow>
